# WxVulkanEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CommonCommands  README.md  compile_shaders.bat
modules/EngineCore/Types/: CMakeLists.txt
modules/EngineCore/Types/private/: Quaternion.cpp
modules/EngineCore/Types/public/: Array.h  Converter.hpp  Vector.hpp
modules/Rendering/: CMakeLists.txt
modules/Rendering/EngineRendering/private/: RenderMeshFactory.cpp  SurfaceRenderMaterialFactory.cpp
modules/Rendering/EngineRendering/public/: RenderMeshFactory.h  SurfaceRenderMaterialFactory.h
modules/Rendering/RHI/: CmakeLists.txt
modules/Rendering/RHI/interface/: ETextureFormat.h  IRenderCamera.h  IRenderLight.h  IRenderMaterial.h  IRenderMesh.h  IRenderScene.h  IRenderSpotlightLight.h  IRenderTarget.h  IRenderTexture.h  IRenderable.h  ISceneRenderer.h
modules/Rendering/VulkanRendering/: CMakeLists.txt
modules/Rendering/VulkanRendering/private/: VulkanRenderInfo.h  VulkanRenderMesh.cpp
modules/Rendering/VulkanRendering/private/RenderMaterials/: VulkanRenderMaterial.cpp  VulkanSurfaceRenderMaterial.cpp
modules/Rendering/VulkanRendering/public/: VulkanRenderInfo.h  VulkanRenderMesh.h
modules/Rendering/VulkanRendering/public/RenderMaterials/: VulkanRenderMaterial.h  VulkanSurfaceRenderMaterial.h
src/App/: CMakeLists.txt  main.cpp
src/App/App/: App.cpp  App.h  CameraComponent.h  Cube.cpp  Cube.h  CubeMesh.h  LightComponent.h  ProjectorLightComponent.h  RenderPanel.h  RenderSurface.h  VulkanFrame.cpp  VulkanFrame.h
src/CompilationTest/: CMakeLists.txt  main.cpp
src/apps/CompilationTest/: CMakeLists.txt
src/modules/Engine/: CMakeLists.txt
src/modules/Engine/private/: Mesh.cpp
src/modules/Engine/public/: Material.h  Mesh.h
src/modules/Engine/public/Components/: CameraComponent.h
src/modules/Engine/public/Engine/: Engine.h
src/modules/Engine/public/Objects/: IRenderTarget.h  RenderTarget.h  SwapchainTarget.h
src/modules/Engine/public/PrimaryComponents/: ILightComponent.h
src/modules/Engine/public/PrimaryObjects/: ICameraComponent.h  ILightComponent.h
src/modules/Engine/public/Rendering/: RenderAPI.h  SceneRenderer.h  VulkanSceneRenderer.h
src/modules/Engine/public/SceneRenderer/: VulkanSceneRenderer.h
src/modules/VulkanAPI/: CMakeLists.txt
src/modules/VulkanAPI/private/: VulkanAPIModule.cpp  VulkanDeviceManager.cpp  VulkanRenderPassManager.cpp  VulkanTransferManager.cpp
src/modules/VulkanAPI/private/Command/: VulkanCommandUtils.cpp
src/modules/VulkanAPI/private/Pipeline/: PipelineUtils.h  VulkanOpaqueMaterial.cpp  VulkanPostprocessPipeline.cpp  VulkanSpotlightLightPipeline.cpp
src/modules/VulkanAPI/private/Rendering/: VulkanRenderTargetRenderer.cpp  VulkanSwapchain.cpp
src/modules/VulkanAPI/public/: VulkanDeviceManager.h  VulkanRenderPassManager.h  VulkanSurface.h  VulkanTransferManager.h
src/modules/VulkanAPI/public/Buffer/: VulkanBuffer.h  VulkanCpuOnlyBuffer.h  VulkanIndexBuffer.h  VulkanVertexBuffer.h
src/modules/VulkanAPI/public/Objects/: VulkanSwapchain.h
src/modules/VulkanAPI/public/Pipeline/: IVulkanMaterial.h  VulkanOpaqueMaterial.h
src/modules/VulkanAPI/public/Rendering/: VulkanShadowMap.h
src/modules/VulkanEngine/: CMakeLists.txt
src/modules/VulkanEngine/private/: Material.cpp  Scene.cpp  SwapchainRenderer.cpp  VulkanAPIModule.cpp  VulkanCamera.cpp  VulkanDescriptorPoolManager.cpp  VulkanDeviceManager.cpp  VulkanImageUtils.h  VulkanLight.cpp  VulkanMaterial.cpp  VulkanRenderEngine.cpp  VulkanRenderImageManager.cpp  VulkanRenderPassManager.cpp  VulkanRenderTarget.cpp  VulkanRenderTargetBase.cpp  VulkanRenderer.cpp  VulkanSurface.cpp  VulkanSwapchain.cpp  VulkanTransferManager.cpp
src/modules/VulkanEngine/private/Buffer/: VulkanBuffer.cpp  VulkanCpuOnlyBuffer.cpp
src/modules/VulkanEngine/private/Command/: VulkanCommandPoolBuilder.cpp  VulkanCommandPoolBuilder.h  VulkanCommandUtils.cpp  VulkanCommandUtils.h
src/modules/VulkanEngine/private/Descriptor/: VulkanDescriptorPoolBuilder.cpp  VulkanDescriptorPoolBuilder.h  VulkanDescriptorUtils.cpp  VulkanDescriptorUtils.h
src/modules/VulkanEngine/private/Light/: VulkanGlobalLightManager.cpp  VulkanLightManager.cpp  VulkanProjectorLight.cpp  VulkanSpotlightLight.cpp
src/modules/VulkanEngine/private/Mesh/: VulkanMesh.cpp
src/modules/VulkanEngine/private/Pipeline/: PipelineUtils.h  VulkanOpaqueMaterial.cpp  VulkanPipelineManager.cpp  VulkanPostprocessPipeline.cpp  VulkanSpotlightLightPipeline.cpp
src/modules/VulkanEngine/private/Rendering/: VulkanRenderTarget.cpp  VulkanRenderTargetRenderer.cpp  VulkanShadowMap.cpp  VulkanShadowMapRenderTarget.cpp  VulkanShadowMapRenderer.cpp  VulkanSwapchain.cpp
src/modules/VulkanEngine/private/Texture/: VulkanRenderTarget.cpp  VulkanShadowMapRenderTarget.cpp  VulkanTexture.cpp
src/modules/VulkanEngine/public/: IVulkanMaterial.h  IVulkanMesh.h  Material.h  RenderTarget.h  Scene.h  ShaderStorageBuffer.h  SwapchainRenderer.h  UniformBufferObject.h  Vertex.h  VulkanAPIModule.h  VulkanCamera.h  VulkanDescriptorPoolManager.h  VulkanDeviceManager.h  VulkanEngine.h  VulkanLight.h  VulkanMaterial.h  VulkanRenderEngine.h  VulkanRenderImageManager.h  VulkanRenderPassManager.h  VulkanRenderTarget.h  VulkanRenderTargetBase.h  VulkanRenderer.h  VulkanSurface.h  VulkanSwapchain.h  VulkanTransferManager.h
src/modules/VulkanEngine/public/Buffer/: VulkanBuffer.h  VulkanGpuOnlyBuffer.h  VulkanIndexBuffer.h  VulkanIndirectBuffer.h  VulkanStagingBuffer.h  VulkanStorageBuffer.h  VulkanUniformBuffer.h  VulkanVertexBuffer.h
src/modules/VulkanEngine/public/Light/: IVulkanLight.h  VulkanGlobalLightManager.h  VulkanLight.h  VulkanLightManager.h  VulkanProjectorLight.h  VulkanSpotlightLight.h
src/modules/VulkanEngine/public/Mesh/: IVulkanMesh.h  VulkanMesh.h
src/modules/VulkanEngine/public/Pipeline/: IVulkanMaterial.h  (+3 more)
src/modules/World/: CMakeLists.txt
src/modules/World/private/: ActorBase.cpp  SceneComponent.cpp
src/modules/World/public/: Actor.h  ActorBase.h  IWorldContextObject.h  SceneComponent.h  Type.h  World.h
(+113 files in other folders)
